--- a/Kubernetes/deployment.yml
+++ b/Kubernetes/deployment.yml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: evezy-v1
+  name: evezy
   labels:
-    app: evezy-v1
+    app: evezy
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: evezy-v1
+      app: evezy
   template:
     metadata:
       labels:
-        app: evezy-v1
+        app: evezy
     spec:
       terminationGracePeriodSeconds: 30
       containers:
-      - name: evezy-v1
+      - name: evezy
         image: maddie2030/evezy-v1:latest
         imagePullPolicy: "Always"
         ports:
-        - containerPort: 4000
+        - containerPort: 80
